--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "core-js": "^3.6.5",
+    "dotenv-webpack": "^7.0.3",
+    "firebase": "^9.6.2",
     "gh-pages": "^3.2.3",
     "vue": "^2.6.11",
+    "vue-easy-slider": "^5.3.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
